- Reimplemented how the code works